--- a/vertical-thermal-review.Rmd
+++ b/vertical-thermal-review.Rmd
@@ -153,17 +153,17 @@ In addition, seasonally dry and wet conditions, deciduousness, and phenology con
 In this review, we focus on growing season conditions (peak LAD) unless otherwise noted.
 
 **Light, specifically the proportion of incident light and photosynthetically active radiation (PAR), decreases from canopy tops to the forest floor, with the profile shape modified by leaf area index (LAI), canopy height, canopy structure, and across species and forest types [Figs. `r fig_NEON_vertical`b-d, `r SIfig_NEON_all`, @koike_leaf_2001].** 
-This gradient is more pronounced under dense canopies, including broad-leaf and mixed forests (e.g., SCBI, SERC and HARV, Fig. `r fig_NEON_vertical`d) than open canopy forests such as needle-leaf forests [e.g., OSBS, PUUM, and WREF, Fig. `r fig_NEON_vertical`d, @aussenacInteractionsForestStands2000a; Smith et al., 2019; Tymen et al., 2017; @chazdonPhotosyntheticLightEnvironments1984; @parkerConsequencesEnvironmentalHeterogeneity2019; @bartemucciOverstoryInfluencesLight2006; @baldocchiSeasonalVariationEnergy1997]. 
+This gradient is more pronounced under dense canopies, including broad-leaf and mixed forests (e.g., SCBI, SERC and HARV, Fig. `r fig_NEON_vertical`d), than under more open canopy forests, including many conifer forests [e.g., OSBS, PUUM, and WREF, Figs. `r fig_NEON_vertical`d, `r SIfig_NEON_all`, @aussenacInteractionsForestStands2000a; Smith et al., 2019; Tymen et al., 2017; @chazdonPhotosyntheticLightEnvironments1984; @parkerConsequencesEnvironmentalHeterogeneity2019; @bartemucciOverstoryInfluencesLight2006; @baldocchiSeasonalVariationEnergy1997]. 
 Variability in the light environment decreases with height, with the shaded understory being highly influenced by sunflecks, or brief increases in solar radiation caused by small canopy gaps and wind-induced canopy movements [@waySunflecksTreesForests2012]. 
 
 **Wind speeds are also higher at the top of the canopy, owing to the effect of buffering with canopy height [@juckerCanopyStructureTopography2018].**
-Wind speed increase with height across forest types from closed-canopy forests [@barnardSeasonalVariationCanopy2016; @mcgregor_tree_nodate; @juckerCanopyStructureTopography2018; @mullerEvidenceEfficientNonevaporative2021] to open savannas [@curtis_intracanopy_2019], including all **#** forested NEON sites. 
-Specifically, across the NEON sites, July maximum daily wind speeds averaged up to **~4** m s^-1^ higher at the top of the NEON vertical profile than at the bottom, where maximum wind speeds consistently averaged < **#** m s^-1^ (Figs. `r fig_NEON_vertical`, `r SIfig_NEON_all`).
+Wind speed increase with height across forest types from closed-canopy forests [@barnardSeasonalVariationCanopy2016; @mcgregor_tree_nodate; @juckerCanopyStructureTopography2018; @mullerEvidenceEfficientNonevaporative2021] to open savannas [@curtis_intracanopy_2019], including all 22 forested NEON sites (Figs. `r fig_NEON_vertical`e, `r SIfig_NEON_all`). 
+Specifically, across the NEON sites, July maximum daily wind speeds averaged up to **~4** m s^-1^ higher at the top of the NEON vertical profile than at the bottom, where maximum wind speeds generally averaged $\le$ **~1** m s^-1^ (Figs. `r fig_NEON_vertical`, `r SIfig_NEON_all`).
 The implication is that upper canopy leaves have substantially higher boundary layer conductance ($g_a$) and associated potential for loss of both water and heat (see next section).
 
 **Air temperature, $T_{air}$, often shows little variation across the vertical gradient, but under certain circumstances it can be significantly buffered by forest canopies (Figs. `r fig_NEON_vertical`, `r SIfig_NEON_all`).**
 The $T_{air}$ gradient along canopies and understories varies with factors such as radiation fluxes, local topography, vertical air mixing, cloud cover and vegetation [*Defrenne et al. 2021*]. 
-Typically, dense canopies buffer understories from maximum $T_{air}$ relatively more than open canopies -- *i.e.*, dense canopy understories can have cooler maximum daytime $T_{air}$ and warmer minimum $T_{air}$ during the night than open canopy understories or nearby clearings [*Defrenne et al. 2021*; @vonarxSpatiotemporalEffectsForest2012a; @defrenneGlobalBufferingTemperatures2019; @davis_microclimatic_2019; @zellweger_seasonal_2019; @ramboCanopyMicroclimateResponse2009]. Noteably, this pattern can be reversed in open canopy forests or sparse stands, where below-canopy maximum $T_{air}$ can be warmer than canopy $T_{air}$ due to turbulent air mixing and thermal radiative flux from the soil and the canopy that is intercepted by lower-canopy layers, analogous to 'canopy greenhouse effect' [@banerjeeExplainingConvectorEffect2017; @curtis_intracanopy_2019;@zweifelMiddayStomatalClosure2002; @hadleyInfluenceKrummholzMat1987; @ramboCanopyMicroclimateResponse2009; @hardwickRelationshipLeafArea2015].    
+Typically, dense canopies buffer understories from maximum $T_{air}$ relatively more than open canopies -- *i.e.*, dense canopy understories can have cooler maximum daytime $T_{air}$ and warmer minimum $T_{air}$ during the night than open canopy understories or nearby clearings [*Defrenne et al. 2021*; @vonarxSpatiotemporalEffectsForest2012a; @defrenneGlobalBufferingTemperatures2019; @davis_microclimatic_2019; @zellweger_seasonal_2019; @ramboCanopyMicroclimateResponse2009]. Notably, this pattern can be reversed in open canopy forests or sparse stands, where below-canopy maximum $T_{air}$ can be warmer than canopy $T_{air}$ due to turbulent air mixing and thermal radiative flux from the soil and the canopy that is intercepted by lower-canopy layers, analogous to 'canopy greenhouse effect' [e.g., OSBS, Figs. `r fig_NEON_vertical`g, `r SIfig_NEON_all`b, @banerjeeExplainingConvectorEffect2017; @curtis_intracanopy_2019;@zweifelMiddayStomatalClosure2002; @hadleyInfluenceKrummholzMat1987; @ramboCanopyMicroclimateResponse2009; @hardwickRelationshipLeafArea2015].    
 
 **Relative humidity, $RH$, is generally highest in the understory and decreases with height across the vertical profile [Fig. `r fig_NEON_vertical`; e.g., @mcgregor_tree_nodate].**
 Dense-canopy forests maintain higher daily maximum $RH$ below-canopy than open forests and nearby open areas, and this effect is greater in wetter conditions, and warmer months [@vonarxSpatiotemporalEffectsForest2012a]. 
