--- a/vertical-thermal-review.Rmd
+++ b/vertical-thermal-review.Rmd
@@ -191,30 +191,35 @@ Often, however, $T_{leaf}$ tracks $T_{air}$ [poikilothermy, @cavaleriColdblooded
 The dominant component of a leaf's energy balance is net radiation ($R_n$, including shortwave and longwave), and high radiation loads can elevate $T_{leaf}$ dramatically above $T_{air}$ (Fig. `r fig_leaf_T`a).
 The dominant avenue of heat loss to the environment is latent heat flux ($\lambda E$), wherein the loss of energy required convert water from liquid to vapour state cools the leaf. 
 Evaporation ($E$) is controlled primarily by stomatal and boundary layer conductances, $g_s$ and $g_a$, and by the water vapour concentration difference between the leaf surface and the bulk air.
-Therefore, $T_{leaf}-T_{air}$ decreases with $g_a$, which in turn increases with wind speed (Fig. `r fig_leaf_T`b) and decreases with leaf size (Fig. `r fig_leaf_T`d);
+Therefore, $T_{leaf}-T_{air}$ decreases with $g_a$, which in turn increases with wind speed [Fig. `r fig_leaf_T`b,@daudetWindSpeedLeaf1999a] and decreases with leaf size (Fig. `r fig_leaf_T`d);
 decreases with $g_s$ (Fig. `r fig_leaf_T`e);
 and decreases with with vapor pressure deficit, or increases with RH (Fig. `r fig_leaf_T`c).
 
 ![**Figure `r fig_leaf_T`. Theoretical expectations for variation in the elevation of $T_{leaf}$ above $T_{air}$ in response to (a) shortwave radiation, (b) wind speed, (c) relative humidity, (d) leaf width, and (e) stomatal conductance.** Leaf temperatures were modeled using the tealeaves R package of @muir_tealeaves_2019 parameterized to represent typical conditions for a broadleaf species (*Quercus rubra*) in a mesic temperate forest (Harvard Forest, Massachusetts, USA), as detailed in Appendix `r appendix_tealeaves_methods`. [ISSUE #6](https://github.com/EcoClimLab/vertical-thermal-review/issues/6).](leaf_energy_balance/Updated T_leaf_png.png)
+
+**Leaf energy balance is a tradeoff between water use strategy and optimum $T_{leaf}$ [@fauset_differences_2018; @kochDiurnalPatternsLeaf1994].** 
+When stomatal conductance ($g_s$) is high, evapotranspiration facilitates heat dissipation. 
+However, when high irradiance, $T_{air}$, $VPD$ or drought cause leaf water demand to exceed water transport, conservation of water ($g_s$ limitation) occurs at the cost of increasing $T_{leaf}$ [@fauset_differences_2018].
+Therefore, while under maximum $g_s$, leaves can maintain $T_{leaf}$ closer to $T_{air}$ at high solar-radiation loads until light saturation, during $g_s$ limitation solar radiation can drastically elevate $T_{leaf}$ above $T_{air}$, especially for larger leaves [@fauset_differences_2018; @songTreeSurfaceTemperature2020; @pauTropicalForestTemperature2018].
 
 **These basic biophysical principles shape the propensity for $T_{leaf}$ to be elevated above $T_{air}$ across vertical gradients in forests.**
 High radiation at the top of the vertical profile (Fig. `r fig_NEON_vertical`) implies that canopy leaves have much greater propensity for high $T_{leaf}-T_{air}$, such that they would be expected to be warmer than understory leaves under most conditions (Fig. `r fig_leaf_T`).
 However, higher windspeeds and lower RH (Fig. `r fig_NEON_vertical`), along with adaptive leaf traits (see next section), give them lower sensitivity to intercepted radiation (Fig. `r fig_leaf_T`a) and higher rates of heat loss (Fig. `r fig_leaf_T`b-e).
 *(I want to add a few sentences on how this varies with environmental conditions-- drought, high humidity....)*
 
-~~~ (*I think we should cut everything between here and "In-situ observations", after harvesting the most important content for the section above.*)
+(**Vertical gradients in $T_{leaf}-T_{air}$ are expected to vary with midrometeorlogical conditions.**)
 
-High wind speed (Fig. `r fig_NEON_vertical`) and large leaf $g_a$ decrease $T_{leaf}$ - $T_{air}$ [Fig. `r fig_leaf_T`b, @daudetWindSpeedLeaf1999a]. 
+~~~ (*I think we should cut everything between here and  next "~~~", after harvesting the most important content for the section above.*)
+
 Therefore, under hot conditions, high wind speeds and high $g_s$ would enable cooling but at lower wind conditions, thickness of air layer at the leaf surface curbs rapid leaf-to-air heat transfer, limiting $g_a$ and increasing $T_{leaf}$ - $T_{air}$ [@martin_boundary_1999; @leighInfluenceLeafSize2017; @robertsStomatalBoundaryLayerConductances1990a; @songTreeSurfaceTemperature2020]
 
 Leaf interiors are $RH$ saturated [@buckleyHumidityLeavesWhy2019], hence when atmospheric $RH$ is lower, leaf to air evapotranspiration increases, decreasing $T_{leaf}$-$T_{air}$. In contrast, when atmospheric $RH$ increases, leaf evapotranspiration and heat-dissipation is stifled, resulting in  greater $T_{leaf}$-$T_{air}$ [@songTreeSurfaceTemperature2020; @tibbittsHumidityPlants1979b; @perezIncreasingHumidityThreatens2018; @konradLeafTemperatureIts].
 
 **In addition, leaf size and morphology, which vary dramatically across the vertical gradient (reviewed in following section), impact $g_{a}$ and therefore leaf temperature.** Small leaves heat and cool faster due to greater $g_a$ than larger leaves that take longer due to lower $ga$. Therefore, $T_{leaf}$-$T_{air}$ is lower for small leaves than large leaves. With adequate water, species with smaller leaves and larger $gs$ will be most effective at cooling during high temperatures [@songTreeSurfaceTemperature2020; @dongBiophysicalHomoeostasisLeaf2017; @konradLeafTemperatureIts; @leighInfluenceLeafSize2017; @leuzingerTreeSpeciesDiversity2007].
 
-Leaf energy balance is a tradeoff between water use strategy and optimum $T_{leaf}$ [@fauset_differences_2018; @kochDiurnalPatternsLeaf1994]. 
-When stomatal conductance ($g_s$) is high, evapotranspiration facilitates heat dissipation. 
-However, when high irradiance, $T_{air}$, $VPD$ or drought cause leaf water demand to exceed water transport, conservation of water ($g_s$ limitation) occurs at the cost of increasing $T_{leaf}$ [@fauset_differences_2018].
-Therefore, while under maximum $g_s$, leaves can maintain $T_{leaf}$ closer to $T_{air}$ at high solar-radiation loads until light saturation, during $g_s$ limitation solar radiation can drastically elevate $T_{leaf}$ above $T_{air}$, especially for larger leaves [@fauset_differences_2018; @songTreeSurfaceTemperature2020; @pauTropicalForestTemperature2018].
+~~~
+
+
 
 **(paragraph on hydraulics as a driver of leaf T:e.g., water on leaves - evaporative cooling - and leaf water content)**
  Across species, inherent leaf $gs$ is generally greater in sun leaves than shade leaves, due to stomata density [Table 1]. However, because factors driving $g_s$ limitation--irradiance, $VPD$ and $T_{air}$--including increase with exposure, $g_s$ limitation is steeper for sun- than shade-leaves, resulting in increased in $T_{leaf}$ (@leighInfluenceLeafSize2017; @fauset_differences_2018). On the other hand, shade leaves can remain cooler under buffered conditions, but lower leaf $gs$ and thermal capacitance can result in greater $T_{leaf}$ under slight heat stress [@leighInfluenceLeafSize2017; @songTreeSurfaceTemperature2020]. Lastly, canopy structure and architecture adaptation can also influence canopy temperature  [@leuzingerTreeSpeciesDiversity2007; @mullerEvidenceEfficientNonevaporative2021]
