switched paragraph order under "in-situ observations"
putting closed canopy paragraph first

--- a/vertical-thermal-review.Rmd
+++ b/vertical-thermal-review.Rmd
@@ -217,14 +217,15 @@ Because sun leaves are exposed to higher irradiance and $VPD$, their $g_s$-limit
 
 ### In-situ observations
 **Following the principles outlined above, vertical microclimate profile and leaf traits (see following section) together shape in-situ $T_{leaf}$ observations (Figs. `r fig_NEON_vertical`-`r fig_leaf_T`).** 
+Canopy leaves can reach much higher maximum $T_{leaf}$, and higher $T_{leaf} - T_{air}$, than understory leaves.
+Closed-canopy forests, including tropical and temperate broadleaf forests, experience greater $T_{leaf} - T_{air}$ and higher maximum $T_{leaf}$ in the upper canopies than buffered lower-canopies, sometimes exceeding optimum for photosynthesis ($T_{opt}$) and $T_{air}$, from $gs$ limitation and irradiance [@niinemetsShapeLeafPhotosynthetic1999; @doughtyAreTropicalForests2008; @fauset_differences_2018; @mauTemperateTropicalForest2018a; @millerOnlySunlitLeaves2021; @rey-sanchez_spatial_2016; @mauTemperateTropicalForest2018a; @rey-sanchez_spatial_2016; @pauTropicalForestTemperature2018]. Upper canopies of temperate-deciduous species can have greater $T_{leaf}$ - $T_{air}$ than tropical moist and wet forest [@mauTemperateTropicalForest2018a] and sparse canopies [@leuzingerTreeSpeciesDiversity2007; @pauTropicalForestTemperature2018], however in considering a broader range of forests, results may differ (Fig. `r fig_NEON_vertical`). At a specie-specific level, leaf boundary resistance is lower for conifers than broad-leaf species, resulting in higher mean $T_{leaf}$ in broad-leaf trees than conifer canopies [@leuzingerTreeSpeciesDiversity2007; @pauTropicalForestTemperature2018]. Spatial distribution of canopy temperature also shows that exposed tropical tree barks can be much warmer than leaves and flowers [@pauTropicalForestTemperature2018]. 
 
-
-In open forests with lower buffering capacity, lower-canopy $T_{leaf}$ is greater than upper canopy, due to vertical air mixing, greater light permeability, still air in the lower canopy and heating from the ground [@mullerEvidenceEfficientNonevaporative2021; @martin_boundary_1999; @zweifelMiddayStomatalClosure2002; @hadleyInfluenceKrummholzMat1987;@rey-sanchez_spatial_2016]. Similarly, trees growing close to the ground can experience greater heat stress in their lower than upper canopies [@hadleyInfluenceKrummholzMat1987; @curtis_intracanopy_2019]. 
+In contrast, in open forests with lower buffering capacity, lower-canopy $T_{leaf}$ is greater than upper canopy, due to vertical air mixing, greater light permeability, still air in the lower canopy and heating from the ground [@mullerEvidenceEfficientNonevaporative2021; @martin_boundary_1999; @zweifelMiddayStomatalClosure2002; @hadleyInfluenceKrummholzMat1987;@rey-sanchez_spatial_2016]. 
+Similarly, trees growing close to the ground can experience greater heat stress in their lower than upper canopies [@hadleyInfluenceKrummholzMat1987; @curtis_intracanopy_2019]. 
 Greater $RH$ in closed-inner canopy can also increase $T_{leaf}$ relatively more than upper-canopy $T_{leaf}$ [@dietzVerticalPatternsDuration2007]. 
 Under other conditions $T_{leaf}$ tracks $T_{air}$, due to high evapotranspiration and therefore differs little between understory and canopy (Fig. `r fig_NEON_vertical`).
 
-**However, canopy leaves can reach much higher maximum $T_{leaf}$, and higher $T_{leaf} - T_{air}$, than understory leaves.** 
-Closed-canopy forests, including tropical and temperate broadleaf forests, experience greater $T_{leaf} - T_{air}$ and higher maximum $T_{leaf}$ in the upper canopies than buffered lower-canopies, sometimes exceeding optimum for photosynthesis ($T_{opt}$) and $T_{air}$, from $gs$ limitation and irradiance [@niinemetsShapeLeafPhotosynthetic1999; @doughtyAreTropicalForests2008; @fauset_differences_2018; @mauTemperateTropicalForest2018a; @millerOnlySunlitLeaves2021; @rey-sanchez_spatial_2016; @mauTemperateTropicalForest2018a; @rey-sanchez_spatial_2016; @pauTropicalForestTemperature2018]. Upper canopies of temperate-deciduous species can have greater $T_{leaf}$ - $T_{air}$ than tropical moist and wet forest [@mauTemperateTropicalForest2018a] and sparse canopies [@leuzingerTreeSpeciesDiversity2007; @pauTropicalForestTemperature2018], however in considering a broader range of forests, results may differ (Fig. `r fig_NEON_vertical`). At a specie-specific level, leaf boundary resistance is lower for conifers than broad-leaf species, resulting in higher mean $T_{leaf}$ in broad-leaf trees than conifer canopies [@leuzingerTreeSpeciesDiversity2007; @pauTropicalForestTemperature2018]. Spatial distribution of canopy temperature also shows that exposed tropical tree barks can be much warmer than leaves and flowers [@pauTropicalForestTemperature2018]. 
+
 
 ## Leaf traits 
 
